Graphic bug fix with footer on mobile version.

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,3 +37,10 @@ footer
     text-align: center;
   }
 }
+@media(max-height: 600px)
+{
+  footer
+  {
+    display: none;
+  }
+}
